# usfmtc

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  release_tag
scripts/: usfmreversify
src/usfmtc/: __init__.py  extension.py  lxmlutils.py  org.vrs  reference.py  usfmgenerate.py  usfmparser.py  usjproc.py  usxcursor.py  usxmodel.py  utils.py  versification.py  xmlutils.py
src/usfmtc/diagrams/: diagrams.py
src/usfmtc/rnc2rng/: __init__.py
src/usfmtc/validating/: usfmgrammar.py  usfmparser.py  usxparser.py
tests/: 32JONBSB.usfm  eng.vrs  test_linkages.py  test_parser.py  test_refs.py  test_versification.py
