[build-system]
requires = ["setuptools>=62.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "usfmtc"
version = "0.3.15"
authors = [{name = "USFM Technical Committee", email = "fonts@sil.org"}]
readme = "README.md"
license = "MIT"
description = "USFM reference parser"
classifiers = [
   "Environment :: Console",
   "Programming Language :: Python :: 3.8",
   "Intended Audience :: Developers",
   "Topic :: Text Processing :: Markup"
   ]
requires-python = ">=3.8"
#dynamic = ["version"]

dependencies = [
"rply",
"regex"
]

[project.optional-dependencies]
git = [
]

[project.urls]
Home-Page = "https://github.com/usfm-bible/usfmtc"

# [tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
usfmtc = ["*.rng", "*.vrs"]

#[tool.setuptools.data-files]
#"" = ["tests/*.usfm"]

[tool.setuptools.dynamic]
# version = {attr = "usfmtc.version"}

#[tool.setuptools]
#packages = ["usfmtc"]

[tool.bdist_wheel]
universal = true

[project.scripts]
usfmconv = "usfmtc:main"
usfmreversify = "usfmtc.versification:main"
urnc2rng = "usfmtc.rnc2rng:main"
